# fullstack-test-backend

./: .env.example  .tool-versions  Dockerfile  IMPROVEMENTS.md  RATIONALES.md  README.md  docker-compose.yml  pyproject.toml
fullstack_test/: api_config.py  api_routes.py  db_config.py  run.py
fullstack_test/api/: invoice_api.py
fullstack_test/domain/: invoice.py  orm.py
fullstack_test/repository/: invoice_pdf_repository.py  invoice_repository.py
fullstack_test/services/: aws_config.py  s3_service.py
sql/: create_tables.sql  populate_tables.sql
tests/api/: test_invoice_api.py
tests/repository/: test_invoice_repository.py
tests/services/: test_s3_service.py
